--- a/shop/src/app/cart/components/cart/cart.component.html
+++ b/shop/src/app/cart/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="cart">
+<mat-card class="cart">
   <strong>{{getProductName(cart.productId)}}</strong>
   <p>Count: <em>{{cart.productCount}}</em></p>
-</div>
+</mat-card>
