--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-product-list></app-product-list>
-<app-cart-list></app-cart-list>
+<app-header></app-header>
+<div class="container">
+  <app-product-list></app-product-list>
+  <app-cart-list></app-cart-list>
+</div>
