--- a/shop/src/app/product/components/product-list/product-list.component.html
+++ b/shop/src/app/product/components/product-list/product-list.component.html
@@ -1,3 +1,5 @@
-<p>product-list works!</p>
-
-<app-product [product]="product" *ngFor="let product of products" (addToCart)="onAddToCart($event)"></app-product>
+<div class="row">
+  <div class="col-xs-12 product-list ">
+      <app-product [product]="product" *ngFor="let product of products" (addToCart)="onAddToCart($event)"></app-product>
+  </div>
+</div>
