--- a/shop/src/app/product/components/product/product.component.html
+++ b/shop/src/app/product/components/product/product.component.html
@@ -1,5 +1,12 @@
-<h3>{{product.name}}</h3>
-<p>Category: <em>{{product.category}}</em></p>
-<p>Price: <em>{{product.price}}</em></p>
-
-<button [disabled]="!product.isAvailable" (click)="onAddToCart()">Buy</button>
+<div class="col-xs-3">
+  <mat-card class="product">
+      <mat-card-content class="product-content">
+        <mat-card-title>{{product.name}}</mat-card-title>
+      <p>Category: <em>{{product.category}}</em></p>
+      <p>Price: <em>{{product.price}}</em></p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button class="btn btn-primary" [disabled]="!product.isAvailable" (click)="onAddToCart()">Buy</button>
+      </mat-card-actions>
+  </mat-card>
+</div>
