--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 <div class="container">
+  <div class="row">
+    <div class="col-xs-12 app-title-wrapper">
+      <h1 #appTitle>Default title</h1>
+    </div>
+  </div>
   <app-product-list></app-product-list>
   <app-cart-list></app-cart-list>
 </div>
