--- a/shop/src/app/cart/components/cart/cart.component.html
+++ b/shop/src/app/cart/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cart">
+<mat-card class="cart" appHighlight>
   <strong>{{getProductName(cart.productId)}}</strong>
   <p>Count: <em>{{cart.productCount}}</em></p>
 </mat-card>
