--- a/shop/src/app/cart/components/cart/cart.component.scss
+++ b/shop/src/app/cart/components/cart/cart.component.scss
@@ -1,5 +1,6 @@
 .cart {
-  background-color: #0389e9;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   padding: 10px 15px;
+  transition: all .2s ease-in;
 }
