--- a/shop/src/app/product/components/product/product.component.scss
+++ b/shop/src/app/product/components/product/product.component.scss
@@ -2,11 +2,16 @@
   width: 300px;
   height: 200px;
   background-color: #fff;
-
+  transition: all .2s ease-in;
   & button:disabled {
     cursor: not-allowed;
   }
   &-content{
     height: 130px;
+  }
+
+
+  &.disabled{
+    background-color: #f6f6f6;
   }
 }
